substrate/frame/support/test/tests/construct_runtime_v2_ui/runtime_struct.rs
#[frame_support::construct_runtime_v2]
mod runtime {
    #[frame::runtime]
    pub enum Runtime {}
}

fn main() {}
